Actions
Bug #5904
closedunable to save/modify files on CIFS share from Windows 7
Start date:
2015-05-02
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
needs-triage
Gerrit CR:
External Bug:
Description
A Windows 7 client sends us write requests that we think are invalid because the request size is longer than 64k and they did not negotiate the "large writes" capability when they started talking to us.
Typical "work around the client bugs" case. The customer doesn't want to hear its' a client side bug ;)
Updated by Gordon Ross over 7 years ago
- Subject changed from unable to save/modify files (zip,notepad,excel) on CIFS share from Windows 7 to unable to save/modify files on CIFS share from Windows 7
Updated by Electric Monk over 7 years ago
- Status changed from New to Closed
- % Done changed from 0 to 100
git commit 1fb4a876cbadf3a151ab8a149be6956199e83e22
commit 1fb4a876cbadf3a151ab8a149be6956199e83e22 Author: Gordon Ross <gwr@nexenta.com> Date: 2015-05-08T14:39:31.000Z 5904 unable to save/modify files on CIFS share from Windows 7 Reviewed by: Kevin Crowe <kevin.crowe@nexenta.com> Reviewed by: Rich Lowe <richlowe@richlowe.net> Approved by: Dan McDonald <danmcd@omniti.com>
Actions