5904 unable to save/modify files on CIFS share from Windows 7 Reviewed by: Kevin Crowe <kevin.crowe@nexenta.com> Reviewed by: Rich Lowe <richlowe@richlowe.net> Approved by: Dan McDonald <danmcd@omniti.com>